--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,12 @@
 .section-img {
   width: 100%;
 }
+.section-space-top {
+  margin-top: 85px;
+}
+.section-space-bottom {
+  margin-bottom: 100px;
+}
 /* nav container */
 .nav-container {
   padding: 36px 0;
@@ -86,14 +92,49 @@
   line-height: 26px;
   margin: 24px 0;
 }
-
+/* team section*/
+.team-container {
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+.team-img {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 24px;
+}
+.team-content {
+  width: 550px;
+}
+.team-title {
+  color: #131313;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.team-title-one {
+  color: #727272;
+  font-weight: 500;
+}
+.team-title-two {
+  color: #ff900e;
+}
+.team-description {
+  color: #727272;
+  font-size: 1rem;
+  line-height: 26px; /* 162.5% */
+  margin: 24px 0;
+}
 /* responsive css */
 
 /* for mobile devices */
 @media (max-width: 576px) {
   .nav-container,
-  .nav-links {
+  .nav-links,
+  .team-container {
     flex-direction: column;
+  }
+  .team-img {
+    grid-template-columns: repeat(1, 1fr);
   }
   .container,
   .banner-content {
@@ -107,13 +148,22 @@
   }
   .banner-title {
     font-size: 2rem;
+  }
+  .team-content {
+    width: 100%;
+    margin-top: 24px;
+    text-align: center;
   }
 }
 /*for laptop and tablet */
 @media (min-width: 576px) and (max-width: 992px) {
   .nav-container,
-  .nav-links {
+  .nav-links,
+  .team-container {
     flex-direction: column;
+  }
+  .team-img {
+    grid-template-columns: repeat(2, 1fr);
   }
   .container,
   .banner-content {
@@ -127,5 +177,10 @@
   }
   .banner-title {
     font-size: 2rem;
+  }
+  .team-content {
+    width: 100%;
+    margin-top: 24px;
+    text-align: center;
   }
 }
